@@ -2,7 +2,7 @@
 #  Maintained by CyberRex (CyberRex0)
 #  Edited by kichirouhoshino for JMusicBot-JPtoEN
 
-FROM openjdk:11-buster
+FROM eclipse-temurin:25-jdk
 
 # DO NOT EDIT UNDER THIS LINE
 RUN mkdir -p /opt/jmusicbot
@@ -15,7 +15,7 @@ RUN \
     echo "Installing packages..." & apt-get install -y ffmpeg wget curl jq > /dev/null; \
     echo "Downloading latest version of JMusicBot-JP..."; \
     wget $(curl https://api.github.com/repos/kichirouhoshino/JMusicBot-JPtoEN/releases/latest | jq -r '.assets[] | select(.browser_download_url | contains(".jar")) | .browser_download_url') -O /opt/jmusicbot/jmusicbot.jar; \
-    echo "cd /opt/jmusicbot && java -Dnogui=true -jar jmusicbot.jar" > /opt/jmusicbot/execute.bash; \
+    echo "cd /opt/jmusicbot && java --enable-native-access=ALL-UNNAMED -Dnogui=true -jar jmusicbot.jar" > /opt/jmusicbot/execute.bash; \
     echo "Build Completed."
 
 CMD ["bash", "/opt/jmusicbot/execute.bash"]
